#40 Fix for overlapping flex items in column

--- a/less/objects/article_details.less
+++ b/less/objects/article_details.less
@@ -361,6 +361,7 @@
 		flex-direction: column;
 		margin-left: 0;
 		margin-right: 0;
+		flex-wrap: nowrap;
 		
 		& .article_cover_wrapper {
 			max-width: 250px;
